--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,69 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
+  flex:2;
+  font-size: 32px;
+  font-weight: bolder;
+  display: flex;
+  align-items: center;
+  padding-left:16px;
 }
 
+.content{
+  display:flex;
+  flex: 15;
+}
 .footer {
-  height: 72px;
   background: #eee;
   color: darkmagenta;
+  flex:1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display:flex;
+  flex-direction: column;
+  gap:15px;
+}
+a{
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
 .sidebar {
-  width: 300px;
   background: royalblue;
+  flex:1;
+  flex-shrink:0;
   box-sizing: border-box;
+  width: 300px;
+  padding: 16px;
 }
-
+.deck{
+  display:flex;
+  flex:3;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 48px;
+  
+}
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  min-height:300px;
+  max-width:350px;
+  
 }
